# Azalea

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  cmake_clean.sh
AzaleaEngine/: CMakeLists.txt
AzaleaEngine/include/Azalea/Core/: Application.hpp  Assert.hpp  Entry.hpp  Event.hpp  Logger.hpp  Macros.hpp
AzaleaEngine/include/Azalea/Platform/: Platform.hpp
AzaleaEngine/include/Azalea/Platform/Unix/: UnixEntry.hpp  UnixPlatformUtil.hpp  UnixWindow.hpp
AzaleaEngine/include/Azalea/Platform/Windows/: WindowsEntry.hpp  WindowsPlatformUtil.hpp  WindowsWindow.hpp
AzaleaEngine/include/Azalea/Window/: Window.hpp
AzaleaEngine/src/Core/: Application.cpp  Assert.cpp  Entry.cpp  Event.cpp  Logger.cpp  Macros.cpp
AzaleaEngine/src/Platform/: Platform.cpp
AzaleaEngine/src/Platform/Unix/: UnixEntry.cpp  UnixPlatformUtil.cpp  UnixWindow.cpp
AzaleaEngine/src/Platform/Windows/: WindowsPlatformUtil.cpp  WindowsWindow.cpp
AzaleaEngine/src/Window/: Window.cpp
AzaleaTest/: AzaleaTest  CMakeLists.txt
AzaleaTest/src/: TestEvent.cpp  TestEvent.h  main.cpp
include/azalea/: Azalea.hpp
include/azalea/core/: Application.hpp  Entry.hpp  Event.hpp  Events.hpp  Input.hpp  Key.hpp  Mouse.hpp  Window.hpp
include/azalea/debug/: Profiler.hpp
include/azalea/event/: Event.hpp
include/azalea/util/: GLUtil.hpp  GladUtil.hpp  Time.hpp
src/: Azalea.cpp
src/core/: Application.cpp  Event.cpp  Events.cpp  Input.cpp  Window.cpp
src/debug/: Profiler.cpp
src/event/: Event.cpp
src/util/: GLUtil.cpp  GladUtil.cpp  Time.cpp
test/: CMakeLists.txt
test/include/: TestApplication.hpp
test/src/: TestApplication.cpp  main.cpp
